--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,7 @@
-<h1>Hello from App Component</h1>
+<!-- 
+    model
+    user ==> image, name, id
+-->
+<div class="flex-container">
+    <router-outlet></router-outlet>
+</div>
