--- a/src/app/components/users/users.component.html
+++ b/src/app/components/users/users.component.html
@@ -1,9 +1,1 @@
-<p>all users works!</p>
-<button (click)="onAddUser()">Add User</button>
-<div class="all-users">
-    <router-outlet></router-outlet>
-
-    <div *ngFor="let user of allUsers">
-        <app-user [user]="user"></app-user>
-    </div>
-</div>
+<app-users-list></app-users-list>
