--- a/src/app/components/users/user/user.component.html
+++ b/src/app/components/users/user/user.component.html
@@ -1,4 +1,8 @@
-<div>
+<div
+[routerLink]="[userId]"
+routerLinkActive="active"
+*ngIf="user"
+>
     <label for=""> {{user.id}} </label>
     <label> {{user.name}} -  </label>
     <img [src]="user.image" width="40" height="40" alt="user">
