writing css for user card

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,8 @@
     model
     user ==> image, name, id
 -->
+<app-header></app-header>
 <div class="flex-container">
     <router-outlet></router-outlet>
 </div>
+<app-footer></app-footer>
