--- a/src/app/components/users/users.component.html
+++ b/src/app/components/users/users.component.html
@@ -1,1 +1,10 @@
-<app-users-list></app-users-list>
+<!-- display the cards here -->
+<div class="flex-container">
+    <div class="users">
+        <app-users-list></app-users-list>
+    </div>
+    <div class="user-interaction">
+        <router-outlet></router-outlet>
+    </div>
+</div>
+<!-- display other components here -->
