--- a/src/app/components/users/users-list/users-list.component.scss
+++ b/src/app/components/users/users-list/users-list.component.scss
@@ -2,14 +2,14 @@
     display: flex;
     flex-wrap: wrap;
     height: 76%;
-    padding: 4px;
+    padding: 8px;
     align-items: center;
     justify-content: center;
 }
 
 .user-card{
     display: flex;
-    border: 1px solid black;
+    // border: 1px solid black;
     border-radius: 10px;
     width: 45%;
     height: 60%;
