--- a/src/app/components/users/user-edit/user-edit.component.html
+++ b/src/app/components/users/user-edit/user-edit.component.html
@@ -1,8 +1,20 @@
-<p>user-edit works!</p>
-<form (ngSubmit)="onCreateNewUser(f)" #f="ngForm" >
-    <label for="username">Name</label>
-    <input type="text" id="username" name="username" [(ngModel)]="userData.name" required >
-    <label for="image">Image URL</label>
-    <input type="text" id="imageURL" name="imageURL" [(ngModel)]="userData.image" ngModel required >
-    <button type="submit">Create</button>
-</form>
+<div class="container">
+    <h2>Vertical (basic) form</h2>
+    <form>
+      <div class="form-group">
+        <label for="username">Email:</label>
+        <input type="text" class="form-control" id="username" name="username" [(ngModel)]="userData.name" required>
+      </div>
+      <div class="form-group">
+        <label for="imageURL">Image URL:</label>
+        <input type="text" class="form-control" id="imageURL" name="imageURL" [(ngModel)]="userData.image" ngModel required >
+      </div>
+      <div *ngIf="!editMode; else editModeBtns" >
+          <button type="submit" class="btn btn-success">Add User</button>
+        </div>
+        <ng-template #editModeBtns>
+            <button type="submit" class="btn btn-primary">Update</button> |
+            <button type="submit" class="btn btn-danger">Delete</button>
+      </ng-template>
+    </form>
+</div>
