--- a/src/app/components/users/users.component.scss
+++ b/src/app/components/users/users.component.scss
@@ -1,18 +1,20 @@
 .flex-container{
     display: flex;
-    width: 100vw;
-    height: 80vh;
+    width: 98vw;
+    height: 84vh;
+    margin: 4px;
 }
 
 .users{
     width: 60%;
     padding: 5px 5px;
     display: flex;
-    border: 1px solid red;
+    // border: 1px solid red;
+    height: 100%;
     overflow: auto;
 }
 
 .user-interaction{
     width: 40%;
-    border: 1px solid cyan;
+    // border: 1px solid cyan;
 }
