getting started with responsiveness

--- a/src/app/components/users/user/user.component.html
+++ b/src/app/components/users/user/user.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="user" class="user-data-container" [routerLink]="[userId]" routerLinkActive="active">
+<div *ngIf="user" class="row user-data-container" [routerLink]="[userId]" routerLinkActive="active">
     <div class="user-data">
         <div class="user-image">
             <img [src]="user.image" alt="user">
