--- a/src/app/components/users/users.component.html
+++ b/src/app/components/users/users.component.html
@@ -1,5 +1,5 @@
 <!-- display the cards here -->
-<div class="flex-container">
+<div class="flex-container row">
     <div class="users">
         <app-users-list></app-users-list>
     </div>
