--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
     user ==> image, name, id
 -->
 <app-header></app-header>
-<div class="flex-container">
+<div class="container-fluid">
     <router-outlet></router-outlet>
 </div>
 <app-footer></app-footer>
