--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,7 +1,25 @@
 /* You can add global styles to this file, and also import other style files */
 @import "~bootstrap/dist/css/bootstrap.min.css";
-*{
-    margin: 0;
-    padding: 0;
+
+* {
+    margin    : 0;
+    padding   : 0;
     box-sizing: border-box;
+}
+
+html {
+    font-size: 62.5%;
+}
+
+
+@media (max-width:768px) {
+    html {
+        font-size: 55%;
+    }
+}
+
+@media (max-width:568px) {
+    html {
+        font-size: 30%;
+    }
 }
