adding usersDataChanged Subject in usersService

--- a/src/app/components/users/user/user.component.html
+++ b/src/app/components/users/user/user.component.html
@@ -6,7 +6,7 @@
         <!-- <div class="user-id">
             <label> {{user.id}} </label>
         </div> -->
-        <div class="username">
+        <div class="username mt-4">
             <label> {{user.name}} - </label>
         </div>
     </div>
