--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -1,6 +1,6 @@
 <header>
-    <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
-        <form class="form-inline">
+    <nav class="navbar px-5 py-2 navbar-expand-sm bg-dark navbar-dark">
+        <form class="mx-2 form-inline">
             <input class="form-control mr-sm-2" type="text" placeholder="Search">
             <button class="btn btn-success" type="submit">Search</button>
         </form>
