--- a/src/app/components/users/user-edit/user-edit.component.html
+++ b/src/app/components/users/user-edit/user-edit.component.html
@@ -1,25 +1,22 @@
 <form class="container" #f="ngForm" (ngSubmit)="onCreateNewUser(f)" >
     <h2>User Data Form</h2>
-    <form>
-      <div class="form-group">
-        <label for="username">Email:</label>
-        <input type="text" class="form-control" id="username" name="username" [(ngModel)]="userData.name" required>
+    <div class="form-group">
+      <label for="username">Username:</label>
+      <input type="text" class="form-control" id="username" name="username" ngModel required>
+    </div>
+    <div class="form-group">
+      <label for="imageURL">Image URL:</label>
+      <input type="text" class="form-control" id="imageURL" name="imageURL" ngModel #imageURL required >
+    </div>
+    <div class="form-group">
+      <img [src]="imageURL.value" alt="image" height="200" width="200">
+    </div>
+    <br>
+    <div *ngIf="!editMode; else editModeBtns" >
+        <button type="submit" class="btn btn-success" [disabled]="!f.valid" >Add User</button>
       </div>
-      <div class="form-group">
-        <label for="imageURL">Image URL:</label>
-        <input type="text" class="form-control" id="imageURL" name="imageURL" [(ngModel)]="userData.image" ngModel required >
-
-      </div>
-      <div class="form-group">
-        <img [src]="userData.image" alt="image" height="200" width="200">
-      </div>
-      <br>
-      <div *ngIf="!editMode; else editModeBtns" >
-          <button type="submit" class="btn btn-success">Add User</button>
-        </div>
-        <ng-template #editModeBtns>
-            <button type="button" class="btn btn-primary" (click)="onUpdateUser()" >Update</button> |
-            <button type="button" class="btn btn-danger" (click)="onDeleteUser()" >Delete</button>
-      </ng-template>
-    </form>
+      <ng-template #editModeBtns>
+          <button type="button" class="btn btn-primary" (click)="onUpdateUser()" >Update</button> |
+          <button type="button" class="btn btn-danger" (click)="onDeleteUser()" >Delete</button>
+    </ng-template>
   </form>
