renaming user component to user-detail

--- a/src/app/components/users/users-list/users-list.component.html
+++ b/src/app/components/users/users-list/users-list.component.html
@@ -1,6 +1,6 @@
 <!-- <button (click)="onAddUserClick()">Add User</button> -->
 <div class="all-users row">
     <div class="user-card" *ngFor="let user of allUsers">
-        <app-user [user]="user" [userId]="user.id" ></app-user>
+        <app-user-detail [user]="user" [userId]="user.id" ></app-user-detail>
     </div>
 </div>
