--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,8 @@
+<!-- 
+    noodles
+        noodles-detail
+ -->
 <app-header></app-header>
 <div class="container-fluid">
-    <router-outlet></router-outlet>
 </div>
 <app-footer></app-footer>
