--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,5 +4,6 @@
  -->
 <app-header></app-header>
 <div class="container-fluid">
+    <router-outlet></router-outlet>
 </div>
 <app-footer></app-footer>
