adding css for cards

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
         noodles-detail
  -->
 <app-header></app-header>
-<div class="container-fluid">
+<div class="container">
     <router-outlet></router-outlet>
 </div>
 <app-footer></app-footer>
