--- a/src/app/components/restaurant/restaurants-list/restaurant-item/restaurant-item.component.html
+++ b/src/app/components/restaurant/restaurants-list/restaurant-item/restaurant-item.component.html
@@ -3,14 +3,26 @@
     {{restaurant.Style}} | {{restaurant["Top Ten"]}} | {{restaurant.Variety}}
 </p> -->
 <div class="card">
-    <img class="card-img-top" src="https://s3-ap-southeast-1.amazonaws.com/he-public-data/indexee3e8a8.jpeg" alt="Card image">
+    <img class="card-img-top" [src]="noodleImageURL"
+        alt="Card image">
     <div class="card-body">
-        <h4 class="card-title">{{restaurant.Brand}}</h4>
-        <p><span>Country:</span> {{restaurant.Country}} <span>Style</span>:{{restaurant.Style}}</p>
-        <p class="card-text">Description:</p>
+        <h4 class="card-title font-weight-bold">{{restaurant.Brand}}</h4>
+
+
+        <p>
+            <span class="font-weight-bold">Country:</span> {{restaurant.Country}} &nbsp;&nbsp;
+            <span class="font-weight-bold">Style </span> : {{restaurant.Style}}
+        </p>
+
+        <p class="card-text font-weight-bold">Description:</p>
         <p>{{restaurant.Variety}}</p>
-        <p>Top Ten: {{restaurant["Top Ten"]}}  Rating {{restaurant.Stars}}<i class="fa fa-star" aria-hidden="true"></i></p>
-        
+
+        <p class="px-2">
+            <span class="font-weight-bold text-left">Top Ten</span>: {{restaurant["Top Ten"]}} &nbsp;&nbsp;
+            <span class="font-weight-bold text-right">Rating</span>&nbsp;{{restaurant.Stars}}&nbsp;<i class="fa fa-star"
+                aria-hidden="true"></i>
+        </p>
+
         <a href="#" class="btn btn-primary">Details</a>
     </div>
 </div>
