--- a/src/app/components/restaurant/restaurants-list/restaurant-item/restaurant-item.component.scss
+++ b/src/app/components/restaurant/restaurants-list/restaurant-item/restaurant-item.component.scss
@@ -1,6 +1,15 @@
 .card{
     font-size: 1.6rem;
     
+    .card-title{
+        font-size: 2rem;
+    }
+
+    .card-body{
+        font-size: 1.2rem;
+    }
+    
+
     a{
         font-size: 1.6rem;
     }
