--- a/src/app/components/restaurant/restaurants-list/restaurant-item/restaurant-item.component.html
+++ b/src/app/components/restaurant/restaurants-list/restaurant-item/restaurant-item.component.html
@@ -2,8 +2,8 @@
     {{restaurant.Brand}} | {{restaurant.Country}} | {{restaurant.Stars}}
     {{restaurant.Style}} | {{restaurant["Top Ten"]}} | {{restaurant.Variety}}
 </p> -->
-<div class="card">
-    <img class="card-img-top" [src]="noodleImageURL"
+<div (click)="restaurantItemClicked()" class="card">
+    <img loading="lazy" class="card-img-top" [src]="noodleImageURL"
         alt="Card image">
     <div class="card-body">
         <h4 class="card-title font-weight-bold">{{restaurant.Brand}}</h4>
@@ -11,7 +11,7 @@
 
         <p>
             <span class="font-weight-bold">Country:</span> {{restaurant.Country}} &nbsp;&nbsp;
-            <span class="font-weight-bold">Style </span> : {{restaurant.Style}}
+            <span class="font-weight-bold">Style </span> : {{restaurant.Style == "Nan" ? "-": restaurant.Style}}
         </p>
 
         <p class="card-text font-weight-bold">Description:</p>
@@ -19,7 +19,7 @@
 
         <p class="px-2">
             <span class="font-weight-bold text-left">Top Ten</span>: {{restaurant["Top Ten"]}} &nbsp;&nbsp;
-            <span class="font-weight-bold text-right">Rating</span>&nbsp;{{restaurant.Stars}}&nbsp;<i class="fa fa-star"
+            <span class="font-weight-bold text-right">Rating</span>&nbsp;{{restaurant.Stars == "NaN" ? "-" : +restaurant.Stars}}&nbsp;<i class="fa fa-star"
                 aria-hidden="true"></i>
         </p>
 
