--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,1 @@
-<!-- 
-    noodles
-        noodles-detail
- -->
-<app-header></app-header>
-<div class="container">
-    <router-outlet></router-outlet>
-</div>
-<app-footer></app-footer>
+<h1>Hello from App Component</h1>
