completing home page

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,58 @@
-<h1>Hello from App Component</h1>
+<div class="container">
+    <div class="row">
+        <div class="heading">
+            <h1>Guttenberg Project</h1>
+            <p>A social cataloging website that allows you to
+                freely search its database of books,
+                annotations, and reviews.
+            </p>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="cards-list">
+            <div class="card">
+                <p><img src="../assets/icons/Fiction.svg" alt="next" height="20" width="20"> Fiction</p>
+                <p>
+                    <img src="../assets/icons/Next.svg" alt="next" height="20" width="20">
+                </p>
+            </div>
+            <div class="card">
+                <p><img src="../assets/icons/Philosophy.svg" alt="next" height="20" width="20"> Philosophy</p>
+                <p>
+                    <img src="../assets/icons/Next.svg" alt="next" height="20" width="20">
+                </p>
+            </div>
+            <div class="card">
+                <p><img src="../assets/icons/Drama.svg" alt="next" height="20" width="20"> Drama</p>
+                <p>
+                    <img src="../assets/icons/Next.svg" alt="next" height="20" width="20">
+                </p>
+            </div>
+            <div class="card">
+                <p><img src="../assets/icons/History.svg" alt="next" height="20" width="20"> History</p>
+                <p>
+                    <img src="../assets/icons/Next.svg" alt="next" height="20" width="20">
+                </p>
+            </div>
+            <div class="card">
+                <p><img src="../assets/icons/Humour.svg" alt="next" height="20" width="20"> Humour</p>
+                <p>
+                    <img src="../assets/icons/Next.svg" alt="next" height="20" width="20">
+                </p>
+            </div>
+            <div class="card">
+                <p><img src="../assets/icons/Adventure.svg" alt="next" height="20" width="20"> Adventure</p>
+                <p>
+                    <img src="../assets/icons/Next.svg" alt="next" height="20" width="20">
+                </p>
+            </div>
+            <div class="card">
+                <p><img src="../assets/icons/Politics.svg" alt="next" height="20" width="20"> Politics</p>
+                <p>
+                    <img src="../assets/icons/Next.svg" alt="next" height="20" width="20">
+                </p>
+            </div>
+        </div>
+    </div>
+</div>
