done with routing for books-list

--- a/src/app/books/books-start/books-start.component.html
+++ b/src/app/books/books-start/books-start.component.html
@@ -1,6 +1,5 @@
-<!-- <p>books works!</p> -->
-<router-outlet></router-outlet>
-<!-- <div class="container">
+<!-- <p>books-start works!</p> -->
+<div class="container">
     <div class="row">
         <div class="heading">
             <h1>Guttenberg Project</h1>
@@ -57,4 +56,4 @@
             </div>
         </div>
     </div>
-</div> -->
+</div>
