--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <!-- <div class="container"> -->
-<p>app works!</p>
+<!-- <p>app works!</p> -->
     <router-outlet></router-outlet>
 
 <!-- </div> -->
