--- a/src/app/books/books-list/books-list.component.html
+++ b/src/app/books/books-list/books-list.component.html
@@ -1,21 +1,41 @@
 <p>books-list works!</p>
 <div class="container">
-    <p>
-        <a routerLink="../" >
-            <img src="../../../assets/icons/Back.svg" alt="next" height="20" width="20">
-        </a>
-        {{genre}}
-    </p>
+    <div class="list-heading">
+        <p>
+            <a routerLink="../" >
+                <img src="../../../assets/icons/Back.svg" alt="next" height="20" width="20">
+            </a>
+            {{genre}}
+        </p>
+    </div>
 
-    <form>
-        <div class="input-group">
-            <div class="input-group-btn">
-                <button class="btn btn-default" type="submit"><i class="fa fa-search"></i></button>
+    <div>
+        <form>
+            <div class="input-group">
+                <div class="input-group-btn">
+                    <button class="btn btn-default" type="submit"><i class="fa fa-search"></i></button>
+                </div>
+                <input type="text" class="form-control" placeholder="Search" name="search">
+                <div class="input-group-btn">
+                    <button class="btn btn-default" type="submit"><i class="fa fa-times"></i></button>
+                </div>
             </div>
-            <input type="text" class="form-control" placeholder="Search" name="search">
-            <div class="input-group-btn">
-                <button class="btn btn-default" type="submit"><i class="fa fa-times"></i></button>
-            </div>
-        </div>
-    </form>
+        </form>
+    </div>
+
+    
+    <div class="books-list">
+        <!-- img, title and author -->
+        <ul>
+            <li *ngFor="let book of booksList" >
+                <div>
+                    <p>
+                        <img src="https://www.gutenberg.org/cache/epub/61207/pg61207.cover.medium.jpg" alt="">
+                    </p>
+                    <p class="title"> {{getDisplayTitleOfBook(book.title)}}</p>
+                    <p class="author"> {{getDisplayNameOfAuthor(book.authors[0]?.name)}}</p>
+                </div>
+            </li>
+        </ul>
+    </div>
 </div>
