--- a/src/app/books/books-list/books-list.component.scss
+++ b/src/app/books/books-list/books-list.component.scss
@@ -1,30 +1,81 @@
-.container{
+.container {
 
-    p{
+    p.list-heading {
         color: #5E56E7;
     }
-    
-    .input-group{
-        background: #F0F0F6;
+
+    .input-group {
+        background   : #F0F0F6;
         // border: 1px solid #5E56E7;
-        padding: 0 10px;
-        max-height: 40px;
+        padding      : 0 10px;
+        max-height   : 40px;
         border-radius: 4px;
-    
-    
-        button{
+
+
+        button {
             outline: none;
         }
-    
-        input{
+
+        input {
             background: #F0F0F6;
-            color: #000;
-            outline: none;
-            border: none;
-            &:focus{
-                border: none;
+            color     : #000;
+            outline   : none;
+            border    : none;
+
+            &:focus {
+                border : none;
                 outline: 0 none;
             }
+        }
+    }
+
+    .books-list {
+        margin: 10px 0px;
+        // padding       : 4px 4px;
+
+        ul {
+            // border        : 1px solid black;
+            display       : flex;
+            flex-direction: row;
+            flex-wrap     : wrap;
+            padding: 2px;
+
+            li {
+                list-style-type: none;
+
+                div {
+                    width    : 130px;
+                    height: 225px;
+                    overflow: hidden;
+                    // border   : 1px solid red;
+                    padding: 4px;
+                    margin: 4px;
+                    cursor: pointer;
+                    transition: .3s all;
+
+                    &:hover{
+                        transform: scale(1.1);
+                    }
+
+                    img {
+                        height: 162px;
+                        width : 114px;
+                        border-radius: 8px;
+                    }
+    
+                    p {
+                        margin: 2px;
+                        font-size: 12px;
+                    }
+
+                    p.title{
+                        font-weight: bold;
+                        text-transform: uppercase;
+                    }
+    
+                }
+            }
+
         }
     }
 }
