--- a/src/app/books/books-list/books-list.component.scss
+++ b/src/app/books/books-list/books-list.component.scss
@@ -13,20 +13,23 @@
 
 
         button {
-            outline: none;
+            &:focus, &:active{
+                outline: none;
+                box-shadow: none;
+            }
         }
-
+        
         input {
             background: #F0F0F6;
             color     : #000;
             outline   : none;
             border    : none;
-
+            
             &:focus {
-                border : none;
-                outline: 0 none;
+                box-shadow: none;
             }
         }
+
     }
 
     .books-list {
