--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,6 +7,14 @@
     box-sizing: border-box;
 }
 
+:root{
+    --igsBlue:#5E56E7;
+    --igsDarkgray: #A0A0A0;
+    --igsMediumGray: #F0F0F6;
+    --igsLightGray: #F8F7FF;
+    --igsBlack:#333333;
+}
+
 .body{
     background-color: #F0F0F6;
 }
