--- a/src/app/books/books-start/books-start.component.html
+++ b/src/app/books/books-start/books-start.component.html
@@ -2,56 +2,56 @@
 <div class="container">
     <div class="row">
         <div class="heading">
-            <h1>Guttenberg Project</h1>
+            <p>Guttenberg Project</p>
             <p>A social cataloging website that allows you to
                 freely search its database of books,
                 annotations, and reviews.
             </p>
         </div>
     </div>
-    
+
     <div class="row">
-        <div class="cards-list" (click)="onGenreCardClick($event)" >
-            <div class="card" data-genre="fiction" >
-                <p><img src="../assets/icons/Fiction.svg" alt="next" height="20" width="20"> Fiction</p>
+        <div class="cards-list" (click)="onGenreCardClick($event)">
+            <div class="card" data-genre="fiction">
+                <p><img src="../assets/icons/Fiction.svg" alt="next"> Fiction</p>
                 <p>
-                    <img src="../assets/icons/Next.svg" alt="next" height="20" width="20">
+                    <img src="../assets/icons/Next.svg" alt="next">
                 </p>
             </div>
             <div class="card" data-genre="philosophy">
-                <p><img src="../assets/icons/Philosophy.svg" alt="next" height="20" width="20"> Philosophy</p>
+                <p><img src="../assets/icons/Philosophy.svg" alt="next"> Philosophy</p>
                 <p>
-                    <img src="../assets/icons/Next.svg" alt="next" height="20" width="20">
+                    <img src="../assets/icons/Next.svg" alt="next">
                 </p>
             </div>
             <div class="card" data-genre="drama">
-                <p><img src="../assets/icons/Drama.svg" alt="next" height="20" width="20"> Drama</p>
+                <p><img src="../assets/icons/Drama.svg" alt="next"> Drama</p>
                 <p>
-                    <img src="../assets/icons/Next.svg" alt="next" height="20" width="20">
+                    <img src="../assets/icons/Next.svg" alt="next">
                 </p>
             </div>
             <div class="card" data-genre="history">
-                <p><img src="../assets/icons/History.svg" alt="next" height="20" width="20"> History</p>
+                <p><img src="../assets/icons/History.svg" alt="next"> History</p>
                 <p>
-                    <img src="../assets/icons/Next.svg" alt="next" height="20" width="20">
+                    <img src="../assets/icons/Next.svg" alt="next">
                 </p>
             </div>
             <div class="card" data-genre="humor">
-                <p><img src="../assets/icons/Humour.svg" alt="next" height="20" width="20"> Humour</p>
+                <p><img src="../assets/icons/Humour.svg" alt="next"> Humour</p>
                 <p>
-                    <img src="../assets/icons/Next.svg" alt="next" height="20" width="20">
+                    <img src="../assets/icons/Next.svg" alt="next">
                 </p>
             </div>
             <div class="card" data-genre="adventure">
-                <p><img src="../assets/icons/Adventure.svg" alt="next" height="20" width="20"> Adventure</p>
+                <p><img src="../assets/icons/Adventure.svg" alt="next"> Adventure</p>
                 <p>
-                    <img src="../assets/icons/Next.svg" alt="next" height="20" width="20">
+                    <img src="../assets/icons/Next.svg" alt="next">
                 </p>
             </div>
             <div class="card" data-genre="politics">
-                <p><img src="../assets/icons/Politics.svg" alt="next" height="20" width="20"> Politics</p>
+                <p><img src="../assets/icons/Politics.svg" alt="next"> Politics</p>
                 <p>
-                    <img src="../assets/icons/Next.svg" alt="next" height="20" width="20">
+                    <img src="../assets/icons/Next.svg" alt="next">
                 </p>
             </div>
         </div>
