--- a/src/app/books/books-list/books-list.component.html
+++ b/src/app/books/books-list/books-list.component.html
@@ -13,14 +13,14 @@
         <form>
             <div class="input-group" [ngStyle]="{'border': searchInputFocused ? '1px solid var(--igsBlue)': 'none'}">
                 <div class="input-group-btn">
-                    <button class="btn btn-default" (click)="onSearchQueryChange($event)"><i
+                    <button class="btn btn-default" (click)="onSearchQueryChange($event); isLoading=true"><i
                             class="fa fa-search"></i></button>
                 </div>
                 <input type="text" class="form-control" name="searchQuery" placeholder="Search"
                     [(ngModel)]="searchQuery" (focus)="searchInputFocused=true" (focusout)="searchInputFocused=false"
-                    (ngModelChange)="onSearchQueryChange($event)" ngModel required>
+                    (ngModelChange)="onSearchQueryChange($event); isLoading=true" ngModel required>
                 <div *ngIf="searchQuery.length>0" class="input-group-btn">
-                    <button id="clearInputBtn" class="btn btn-default" (click)="onSearchQueryChange($event)"><i
+                    <button id="clearInputBtn" class="btn btn-default" (click)="searchQuery=''; onSearchQueryChange($event); isLoading=true"><i
                             class="fa fa-times"></i></button>
                 </div>
             </div>
